--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -16,3 +16,16 @@ border-radius:100%;
 	color:$blue;
 	}
 }
+
+.food {
+	h2 {
+	cursor:pointer;
+	}
+ .day {
+ display:none;
+   -webkit-transition: all 2s ease-out;
+  -moz-transition: all 2s ease-out;
+  -o-transition: all 2s ease-out;
+  transition: all 2s ease-out;
+ }
+}
