--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -2,7 +2,7 @@
 this file is for main css
  */
 @import "compass/css3";
-@import "compass/reset";
+//@import "compass/reset";
 @import "vars";
 h1 {
 color:$blue;
