added somebootstrap things

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -37,6 +37,10 @@ border-radius:100%;
 }
 body {
  font-family: "Times New Roman", Georgia, Serif;
- 
+  table {
+  
+  padding: 15px !important;
+
+  }
 
 }
