--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -57,10 +57,14 @@ margin:0 auto;
 display:-ms-flexbox;
 display:-webkit-flex;
 display:flex;
+-ms-flex-wrap:wrap;
+-webkit-flex-wrap:wrap;
+flex-wrap:wrap;
 -ms-flex-justify:space-between;
 -webkit-justify-content:space-between;
 justify-content:space-between;
-
+width:400px;
+max-width:100%;
 
 
 }
