--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -63,9 +63,10 @@ flex-wrap:wrap;
 -ms-flex-justify:space-between;
 -webkit-justify-content:space-between;
 justify-content:space-between;
-width:400px;
+width:500px;
 max-width:100%;
-
+button {
+margin-bottom:15px}
 
 }
 }
