--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -49,6 +49,9 @@ width:1280px;
 max-width:100%;
 div {
 max-width:100%;
+width: 800px;
+margin-left: auto;
+margin-right: auto;
 }
 table {
 margin:0 auto;
