--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -85,6 +85,16 @@ background-color:#01c6d8;
 table {
 font-size:13px !important;
 }
-
+.content .buttons button {
+width:150px;
+}
+.content  .buttons {
+flex-direction:column;
+align-items:center;
+-webkit-flex-direction:column;
+-webkit-align-items:center;
+-ms-flex-pack:center;
+-ms-flex-direction:column;
+}
 }
 
