--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -127,14 +127,14 @@ font-size:12px;
 h3 {
 font-size:16px;
 cursor:pointer;
-text-weigth: bold;
+font-weigth: bold;
 
 }
 .otherdata {
 display:none;
 }
 .desc {
-text-weigth: bold;
+font-weigth: bold;
 }
 
 }
