--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -149,5 +149,12 @@ text-decoration:underline;
 p.category,h3.title {
 margin-bottom:0;
 }
+.fa-star {
+color: #e0e0d1;
+}
+.checked {
+color: #0733C3;
+}
+
 
 }
