--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -18,9 +18,15 @@ border-radius:100%;
 	color:$red;
 	}
 }
-
+h1 {
+font-size:18px;
+//cursor:pointer;
+font-weight: bold;
+}
 .food {
 	h2 {
+	font-size: 16px;
+font-weight: bold;
 	cursor:pointer;
 	   -webkit-transition: all 2s ease-out;
   -moz-transition: all 2s ease-out;
@@ -115,11 +121,11 @@ align-items:center;
 	  color: #fff;
 	  text-decoration: none; 
 	  width: 100%;
-min-width: 100%;
-display: block;
-padding-top: 5px;
-padding-bottom: 5px;
-border-bottom: 1px solid rgba(255,255,255,0.3);
+		min-width: 100%;
+		display: block;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		border-bottom: 1px solid rgba(255,255,255,0.3);
 	}
 	a:hover,a:active, a:visited {
 	color:#fff;
