--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -45,6 +45,15 @@ font-weight: bold !important;
   transition: all 2s ease-out;
  }
 }
+
+.content .page-container {
+
+max-width: 100% !important;
+width: 800px !important;
+margin-left: auto !important;
+margin-right: auto !important;
+}
+
 body {
  font-family: "Times New Roman", Georgia, Serif;
   table {
@@ -55,13 +64,7 @@ body {
 
 }
 
-.content .page-container {
 
-max-width: 100%;
-width: 800px;
-margin-left: auto;
-margin-right: auto;
-}
 
 .content {
 width:1280px;
