--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -34,6 +34,13 @@ font-weight: bold !important;
   -o-transition: all 2s ease-out;
   transition: all 2s ease-out;
 	}
+	h4 {
+	font-size: 16px;
+font-weight: bold;
+	}
+	p {
+	font-size:12px;
+	}
 	h2:hover {
 	color:ltblue;
 	}
@@ -97,7 +104,7 @@ background-color:#01c6d8;
 
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:800px) {
 table {
 font-size:13px !important;
 }
