Layout tweak for price and colour test. Hope nothing breaks

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -59,6 +59,9 @@ max-width: 90% !important;
 width: 800px !important;
 margin-left: auto !important;
 margin-right: auto !important;
+h2 {
+	Color: #FFCE09;
+}
 }
 
 body {
