--- a/css/sass/_vars.scss
+++ b/css/sass/_vars.scss
@@ -6,3 +6,6 @@ this file is for variables colors etc
 
 $red: red;
 $blue: blue;
+$opiskelija_colour: #44DB68;
+$hlokuntavari: #DCAF36;
+$kallisvari: #F86346;
