Font and margin tweaks

--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -39,7 +39,8 @@ font-weight: bold !important;
 font-weight: bold;
 	}
 	p {
-	font-size:12px;
+	font-size:13px;
+	margin-bottom:5px;
 	}
 	h2:hover {
 	color:ltblue;
